<resources>
    <string name="app_name">TallerMaterial</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="crear_libro">CREAR LIBROS</string>
    <string name="isbn">ISBN</string>
    <string name="nombre">Nombre</string>
    <string name="autor">Autor</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="eliminar">Eliminar</string>
    <string name="detalle_libros">DETALLE LIBROS</string>
    <string name="msj_guardado_exitosamente">Libro Guardado Exitosamente!</string>
    <string name="seleccionar_foto">seleccione la foto de la persona</string>
    <string name="Titulo_eliminar">Eliminar Libro</string>
    <string name="mensaje_eliminar">¿Estas seguro de eliminar este libro?</string>
    <string name="mensaje_positivo">Si</string>
    <string name="mensaje_negativo">No</string>
    <string name="mensaje_error_ISBN">Digite el ISBN</string>
    <string name="mensaje_error_nombre">Coloque el nombre</string>
    <string name="mensaje_error_autor">Coloque el autor</string>
    <string name="mensaje_error_foto">Selecciona una foto</string>
    <string name="mensaje_error_isbn">Ya existe un libro con este ISBN</string>
</resources>